--- a/examples/canvas/src/style.css
+++ b/examples/canvas/src/style.css
@@ -2,7 +2,7 @@
 
 :root {
   text-rendering: geometricPrecision;
-  font-kerning: none;
-  word-break: break-word;
+  /* font-kerning: none;
+  word-break: break-word; */
   /* word-break: break-all; */
 }
