--- a/examples/asciiLand/src/style.css
+++ b/examples/asciiLand/src/style.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+@font-face {
+  font-family: "Courier Prime Sans";
+  src: url("Courier Prime Sans.ttf");
+}
+
+:root {
+  font-family: "Courier Prime Sans", monospace;
+}
